--- a/Fixedcode/Backend/package.json
+++ b/Fixedcode/Backend/package.json
@@ -39,6 +39,7 @@
     "random-words": "^1.3.0",
     "rword": "^3.2.1",
     "socket.io": "^4.7.4"
+    "uglify-js": "^3.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
