--- a/Fixedcode/Backend/package.json
+++ b/Fixedcode/Backend/package.json
@@ -38,7 +38,7 @@
     "password-validator": "^5.3.0",
     "random-words": "^1.3.0",
     "rword": "^3.2.1",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
     "uglify-js": "^3.14.0"
   },
   "devDependencies": {
