--- a/Fixedcode/Backend/package.json
+++ b/Fixedcode/Backend/package.json
@@ -40,7 +40,7 @@
     "rword": "^3.2.1",
     "socket.io": "^4.7.4",
     "uglify-js": "^3.14.0",
-     "exports": "^1.0.0"
+     "exports.js": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
